#Call API Data Cart page

--- a/Client/src/components/header/header.scss
+++ b/Client/src/components/header/header.scss
@@ -133,6 +133,7 @@
 
                     &__ul {
                         height: auto;
+                        max-height: 300px;
                         list-style: none;
                         overflow-y: auto;
 
