#1 CSS Staff Page

--- a/Client/src/components/infocard/info-card.scss
+++ b/Client/src/components/infocard/info-card.scss
@@ -35,5 +35,9 @@
                 flex: 1;
             }
         }
+
+        &:hover {
+            outline: 1px solid #2e65ff;
+        }
     }
 }
