--- a/Client/src/components/modal/modal.scss
+++ b/Client/src/components/modal/modal.scss
@@ -19,22 +19,19 @@
     }
 
     &__content {
-        padding: 2rem;
+        // padding: 2rem;
         background-color: $body-bg;
         width: 50%;
         opacity: 0;
         transform: translateY(-250px);
         transition: transform 0.6s ease, opacity 0.6s ease;
         position: relative;
-
-        @include tablet {
-            width: 80%;
-        }
+        border-radius: 10px;
 
         &__close {
             position: absolute;
             right: 5px;
-            top: 5px;
+            top: 0;
             font-size: 1.5rem;
             cursor: pointer;
 
