--- a/Client/src/pages/admin/staff/staff.scss
+++ b/Client/src/pages/admin/staff/staff.scss
@@ -60,7 +60,7 @@
 
                     &__info-login {
                         width: 100%;
-                        height: 50%;
+                        height: 45%;
                         @include flex (center, center);
 
                         &__left {
@@ -71,7 +71,7 @@
                             flex-direction: column;
 
                             & > * ~ * {
-                                margin-top: 5%;
+                                margin-top: 10px;
                             }
 
                             &__title {
@@ -133,7 +133,7 @@
 
                     &__info-contact {
                         width: 100%;
-                        height: 50%;
+                        height: 45%;
                         @include flex(center, flex-start);
                         flex-direction: column;
                         color: #2e65ff;
@@ -189,6 +189,22 @@
                                     }
                                 }
                             }
+                        }
+                    }
+
+                    &__submit {
+                        width: 200px;
+                        height: 10%;
+                        border: 1px solid #2e65ff;
+                        border-radius: 5px;
+                        font-size: 1.2rem;
+                        font-weight: 600;
+                        margin: 15px 0;
+
+                        &:hover {
+                            cursor: pointer;
+                            background-color: #2e65ff;
+                            color: #fff;
                         }
                     }
                 }
