--- a/Client/src/components/personcard/person-card.scss
+++ b/Client/src/components/personcard/person-card.scss
@@ -14,6 +14,8 @@
         width: 100%;
         height: 100%;
         padding: 20px;
+        position: relative;
+
         &__inner {
             @include flex (center, center);
             flex-direction: column;
@@ -67,11 +69,32 @@
                 width: 100%;
                 height: 30%;
             }
+
+            &:hover {
+                color: #000;
+            }
+
+        }
+        &__delete-user {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 1.6rem;
+            width: 30px;
+            height: 30px;
+            @include flex (center, center);
+            border-radius: 10px;
+            box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
+            z-index: 11;
+            &:hover {
+                cursor: pointer;
+                background-color: rgb(207, 8, 8);
+                color: #fff;
+            }
         }
 
         &:hover {
             outline: 1px solid #2e65ff;
-            color: #000;
         }
     }
 }
