--- a/Client/src/components/personcard/person-card.scss
+++ b/Client/src/components/personcard/person-card.scss
@@ -93,6 +93,67 @@
             }
         }
 
+        &__modal {
+            height: 150px;
+            width: 450px;
+            border-radius: 5px;
+            position: absolute;
+            top: 30px;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+            @include flex (center, space-between);
+            flex-direction: column;
+
+            &__header {
+                width: 100%;
+                height: 30%;
+                @include flex (center, flex-start);
+                padding: 0 20px;
+                font-size: 1.4rem;
+                font-weight: 600;
+                color: red;
+                border-bottom: 1px solid #e4e4e4;
+            }
+
+            &__body {
+                width: 100%;
+                height: 30%;
+                @include flex (flex-start, flex-start);
+                padding: 0 20px;
+                font-size: 1.2rem;
+                border-bottom: 1px solid #e4e4e4;
+
+            }
+
+            &__footer {
+                width: 100%;
+                height: 30%;
+                @include flex (center, flex-end);
+
+                &__cancel, &__ok {
+                    margin-right: 10px;
+                    font-size: 1.2rem;
+                    border-radius: 2px;
+                    color: #fff;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+
+                &__cancel {
+                    width: 50px;
+                    height: 30px;
+                    background-color: #999;
+                }
+
+                &__ok {
+                    width: 70px;
+                    height: 30px;
+                    background-color: red;
+                }
+            }
+        }
+
         &:hover {
             outline: 1px solid #2e65ff;
         }
