--- a/Client/src/components/sidebar/side-bar.scss
+++ b/Client/src/components/sidebar/side-bar.scss
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     bottom: 0;
+    box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
 
     &__logo {
         width: 100%;
