--- a/Client/src/pages/admin/staffdetail/staff-detail.scss
+++ b/Client/src/pages/admin/staffdetail/staff-detail.scss
@@ -91,7 +91,146 @@
 
         &__right {
             width: 70%;
-            border: 1px solid #ccc;
+
+            &__personal {
+                border-radius: 5px;
+                box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
+                width: 100%;
+                padding: 20px;
+                @include flex (flex-start, center);
+                flex-direction: column;
+                position: relative;
+
+                &__edit {
+                    width: 35px;
+                    height: 35px;
+                    box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
+                    background-color: #fff;
+                    border-radius: 50px;
+                    position: absolute;
+                    top: 10px;
+                    right: 10px;
+                    @include flex (center, center);
+                    font-size: 1.6rem;
+    
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+
+                &__form {
+                    width: 100%;
+                    @include flex (flex-start, center);
+                    flex-direction: column;
+
+                    &__username, &__address {
+                        width: 100%;
+                        height: 40px;
+                        margin-top: 20px;
+                        border-radius: 5px;
+                        border: 1px solid #ccc;
+                        padding: 0 10px;
+                        background-color: #fafafa;
+    
+                        legend {
+                            font-size: 1rem;
+                            margin-left: 10px;
+                            padding: 0 5px;
+                            line-height: 0;
+                        }
+
+                    }
+
+                    &__2-input {
+                        @include flex (center, space-between);
+                        width: 100%;
+                        margin-top: 10px;
+                        &__fname, &__lname, &__birth, &__sex  {
+                            width: 49%;
+                            height: 40px;
+                            margin-top: 10px;
+                            border-radius: 5px;
+                            border: 1px solid #ccc;
+                            padding: 0 10px;
+                            background-color: #fafafa;
+        
+                            legend {
+                                font-size: 1rem;
+                                margin-left: 10px;
+                                padding: 0 5px;
+                                line-height: 0;
+                            }
+    
+                        }
+                    }
+                }
+            }
+
+            &__contact {
+                border-radius: 5px;
+                box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
+                width: 100%;
+                padding: 20px;
+                margin-top: 20px;
+                @include flex (flex-start, center);
+                flex-direction: column;
+                position: relative;
+
+                &__edit {
+                    width: 35px;
+                    height: 35px;
+                    box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
+                    background-color: #fff;
+                    border-radius: 50px;
+                    position: absolute;
+                    top: 10px;
+                    right: 10px;
+                    @include flex (center, center);
+                    font-size: 1.6rem;
+    
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+
+                &__form {
+                    width: 100%;
+                    @include flex (flex-start, center);
+                    flex-direction: column;
+
+                    &__phone, &__email {
+                        width: 100%;
+                        height: 40px;
+                        margin-top: 15px;
+                        border-radius: 5px;
+                        border: 1px solid #ccc;
+                        padding: 0 10px;
+                        background-color: #fafafa;
+    
+                        legend {
+                            font-size: 1rem;
+                            margin-left: 10px;
+                            padding: 0 5px;
+                            line-height: 0;
+                        }
+
+                    }
+                }
+            }
+
+            &__rs-password {
+                border: 1px solid #ccc;
+                height: 40px;
+                width: 150px;
+                margin-top: 15px;
+                border-radius: 10px;
+                background-color: #fff;
+
+                &:hover {
+                    cursor: pointer;
+                    border: 1px solid #2e65ff;
+                }
+            }
         }
     }
 }
