--- a/Client/src/pages/admin/staff/staff.scss
+++ b/Client/src/pages/admin/staff/staff.scss
@@ -5,6 +5,18 @@
     @include flex (flex-start, center);
     flex-direction: column;
 
+    &__loading {
+        width: 100%;
+        height: 100vh;
+        @include flex (center, center);
+
+        &__icon {
+            font-size: 5rem;
+            animation: spinner 2s linear infinite;
+        }
+
+    }
+
     &__title {
         font-size: 1.6rem;
         font-weight: 600;
@@ -225,5 +237,14 @@
     &__list-st {
         @include flex (center, center);
         flex-wrap: wrap;
+    }
+}
+
+@keyframes spinner {
+    from {
+        transform: translateY(-50%) rotate(0);
+    }
+    to {
+        transform: translateY(-50%) rotate(360deg);
     }
 }
