--- a/Client/src/pages/shop/shop.scss
+++ b/Client/src/pages/shop/shop.scss
@@ -4,6 +4,20 @@
     width: 100%;
     @include flex (center, center);
 
+    &__loading {
+        font-size: 1.4rem;
+        width: 100%;
+        padding: 60px 0 0px 0;
+        @include flex (center, center);
+        flex-direction: column;
+
+        &__icon {
+            font-size: 5rem;
+            animation: spinner 2s linear infinite;
+        }
+
+    }
+
     &__wrapper {
         margin: 50px 0 50px 0;
         width: 100%;
@@ -138,5 +152,14 @@
 
     i {
         font-size: 4rem;
+    }
+}
+
+@keyframes spinner {
+    from {
+        transform: translateY(-50%) rotate(0);
+    }
+    to {
+        transform: translateY(-50%) rotate(360deg);
     }
 }
