--- a/Client/src/components/tabreview/tab-review.scss
+++ b/Client/src/components/tabreview/tab-review.scss
@@ -76,6 +76,7 @@
                 height: 100px;
 
                 &__content {
+                    padding: 10px;
                     width: 100%;
                     height: 100px;
                     border-radius: 5px;
