--- a/Client/src/components/tabreview/tab-review.scss
+++ b/Client/src/components/tabreview/tab-review.scss
@@ -103,7 +103,6 @@
 
             &__rating {
                 font-size: 1.2rem;
-                color: $main-color;
                 & > * ~ * {
                     margin-left: 50px;
                 }
@@ -130,4 +129,12 @@
         color: $black-color;
         border-bottom: 1px solid #ccc;
     }
+}
+
+input[type= radio] {
+    display: none;
+}
+
+.star {
+    cursor: pointer;
 }
