--- a/Client/src/pages/register/register.scss
+++ b/Client/src/pages/register/register.scss
@@ -6,18 +6,37 @@
     margin: 20px 0;
     @include flex(center, center);
 
+    &__overlay {
+        background-color: rgba(0, 0, 0, 0.3);
+        width: 100%;
+        height: 100%;
+        z-index: 9;
+        position: fixed;
+        display: none;
+
+        &.ovl {
+            display: block;
+        }
+    }
+
     &__modal {
-        background-color: #ffdd8f;
+        background-color: #fff;
         z-index: 10;
-        width: 40%;
-        height: 20%;
+        width: 30%;
+        height: 25%;
         position: fixed;
         @include flex(center, space-evenly);
         flex-direction: column;
         padding: 10px 20px;
+        box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
+        border-radius: 10px;
+        display: none;
 
         &__txt {
             font-size: 1.2rem;
+            span {
+                font-size: 1.1rem;
+            }
         }
 
         &__input {
@@ -28,21 +47,26 @@
                 height: 30px;
                 // flex: 2;
                 width: 70%;
-                border: 1px solid #ccc;
+                border: 1px solid #999;
                 border-radius: 5px;
                 padding: 10px;
             }
 
             &__btn {
                 // flex: 1;
-                background-color: #999;
+                background-color: $main-color;
                 height: 30px;
                 width: 25%;
                 border-radius: 5px;
                 @include flex(center, center);
                 padding: 10px;
                 cursor: pointer;
+                color: $white-color;
             }
+        }
+
+        &.show {
+            display: flex;
         }
     }
 
