--- a/Client/src/pages/register/register.scss
+++ b/Client/src/pages/register/register.scss
@@ -30,7 +30,10 @@
         padding: 10px 20px;
         box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
         border-radius: 10px;
-        display: none;
+        opacity: 0;
+        transform: translateY(-250px);
+        transition: transform 0.6s ease, opacity 0.6s ease;
+        // display: none;
 
         &__txt {
             font-size: 1.2rem;
@@ -41,15 +44,26 @@
 
         &__input {
             width: 100%;
-            @include flex(center, space-between);
-
-            &__content {
-                height: 30px;
-                // flex: 2;
+            @include flex(flex-start, space-between);
+            &__wrapper {
                 width: 70%;
-                border: 1px solid #999;
-                border-radius: 5px;
-                padding: 10px;
+                @include flex(flex-start, flex-start);
+                flex-direction: column;
+
+                &__content {
+                    height: 30px;
+                    // flex: 2;
+                    width: 100%;
+                    border: 1px solid #999;
+                    border-radius: 5px;
+                    padding: 10px;
+                }
+
+                span {
+                    font-size: 1rem;
+                    font-weight: 500;
+                    color: red;
+                }
             }
 
             &__btn {
@@ -66,7 +80,8 @@
         }
 
         &.show {
-            display: flex;
+            opacity: 1;
+            transform: translateY(0);
         }
     }
 
