--- a/Client/src/pages/login/login.scss
+++ b/Client/src/pages/login/login.scss
@@ -53,6 +53,7 @@
                 &__btn-login {
                     width: 100%;
                     height: 30px;
+                    background-color: #975129;
                     @include flex(center, center);
                     font-size: 1rem;
                 }
