--- a/Client/src/pages/admin/ingredient-page/ingredient/ingredient.scss
+++ b/Client/src/pages/admin/ingredient-page/ingredient/ingredient.scss
@@ -82,7 +82,8 @@
                     font-weight: 500;
                     text-align: center;
                     border: 1px solid #ccc;
-                    
+                    padding: 5px 0 0 0;
+                                        
                     img {
                         width: 50px;
                         height: 50px;
