--- a/Client/src/pages/admin/ingredient-page/ingredient/ingredient.scss
+++ b/Client/src/pages/admin/ingredient-page/ingredient/ingredient.scss
@@ -4,6 +4,25 @@
     padding: 20px;
     width: 100%;
 
+    &__header {
+        @include flex(center, flex-start);
+
+        &__btn-create {
+            margin-left: 20px;
+            height: 35px;
+            background-color: #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            cursor: pointer;
+            box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.0rem 0.5rem;
+        }
+
+        &__modal {
+            width: 1200px;
+            height: 600px;
+        }
+    }
+
     &__container {
         margin-top: 40px;
         width: 100%;
