--- a/Client/src/components/sidebar/side-bar.scss
+++ b/Client/src/components/sidebar/side-bar.scss
@@ -38,18 +38,41 @@
         margin-left: 10px;
     }
 
-    &:hover {
-        background-color: #ccc;
-    }
-
     &__icon-active {
+        display: none;
+    }
+    
+    &.active > &__icon {
         display: none;
     }
 
     &.active > &__icon-active {
         display: flex;
     }
-    &.active > &__icon {
-        display: none;
+
+    &.active {
+        background-color: #ccc;
+    }
+    
+    &:hover {
+        background-color: #ccc;
+        color: #000;
+    }
+
+    &__list {
+        width: 100%;
+        height: 35px;
+        @include flex(center, flex-start);
+        background-color: #e9e9e9;
+
+        span {
+            margin-left: 20px;
+        }
+
+        &:hover {
+            background-color: #ccc;
+            color: #000;
+        }
+
     }
 }
