--- a/Client/src/components/sidebar/side-bar.scss
+++ b/Client/src/components/sidebar/side-bar.scss
@@ -64,9 +64,18 @@
         height: 35px;
         @include flex(center, flex-start);
         background-color: #e9e9e9;
+        display: none;
 
-        span {
-            margin-left: 20px;
+        a {
+            margin-left: 30px;
+            color: #000;
+        }
+
+        &__item {
+
+            &.active {
+                color: $main-color;
+            }
         }
 
         &:hover {
@@ -74,5 +83,8 @@
             color: #000;
         }
 
+        &.active {
+            display: flex;
+        }
     }
 }
