--- a/Client/src/components/sidebar/side-bar.scss
+++ b/Client/src/components/sidebar/side-bar.scss
@@ -12,14 +12,17 @@
     box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
 
     &__logo {
-        width: 100%;
-        height: 100px;
         @include flex (center, center);
-        font-size: 1.6rem
+        img {
+            width: 150px;
+            height: 150px;
+            font-size: 1.6rem
+        }
     }
 }
 
 .menu-side-bar {
+    margin-top: 20px;
     @include flex (flex-start, flex-start);
     flex-direction: column;
     width: 100%;
@@ -59,32 +62,30 @@
         color: #000;
     }
 
+    &.active > &__list {
+        display: flex;
+    }
+
     &__list {
-        width: 100%;
-        height: 35px;
-        @include flex(center, flex-start);
-        background-color: #e9e9e9;
-        display: none;
-
-        a {
-            margin-left: 30px;
-            color: #000;
-        }
-
+        @include flex(flex-start, center);
+        flex-direction: column;
+            
         &__item {
-
+            width: 100%;
+            height: 35px;
+            background-color: #e9e9e9;
+            padding-left: 30px;
+            @include flex(center, flex-start);
+            
             &.active {
                 color: $main-color;
             }
         }
 
+
         &:hover {
             background-color: #ccc;
-            color: #000;
-        }
-
-        &.active {
-            display: flex;
+            // color: #000;
         }
     }
 }
