--- a/Client/src/pages/profile/profile.scss
+++ b/Client/src/pages/profile/profile.scss
@@ -25,6 +25,8 @@
         box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
         @include flex(flex-start, space-between);
         padding: 40px 50px 0;
+        position: relative;
+        border-radius: 5px;
 
         &__form {
             width: 60%;
@@ -57,6 +59,46 @@
         &__img {
             width: 35%;
             height: 90%;
+            @include flex(center, center);
+            flex-direction: column;
+
+            & > * ~ * {
+                margin-top: 20px;
+            }
+
+            img {
+                width: 150px;
+                height: 150px;
+                object-fit: contain;
+            }
+
+            input {
+                width: 200px;
+            }
+
+            span {
+                font-size: 1.1rem;
+                font-weight: 500;
+                color: #999;
+                width: 200px;
+            }
+        }
+
+        &__btn {
+            position: absolute;
+            bottom: 20px;
+            right: 40px;
+            width: 100px;
+            height: 35px;
+            background-color: $main-color;
+            color: #fff;
+            border-radius: 2px;
+            box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.25rem 0.5rem;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgba(205, 133, 63, 0.9);
+            }
         }
 
     }
