--- a/Client/src/pages/address/address.scss
+++ b/Client/src/pages/address/address.scss
@@ -51,100 +51,104 @@
         padding: 40px 50px 0;
         position: relative;
         border-radius: 5px;
-        overflow: scroll;
 
         &__text {
+            width: 100%;
             font-size: 1.4rem;
-        }
-
-        & > * ~ * {
-            margin-top: 20px;
-            border-top: 1px solid #ccc;
+            // border-bottom: 1px solid #ccc;
         }
 
         &__form {
-            width: 100%;
-            padding: 20px 0 0;
-
-            &__inner {
-            @include flex(flex-start, space-between);
-
-                &__list {
-                    
-                    &__item {
-                        &__contact {
-                             @include flex(center, flex-start);
-
-                            &__name {
-                                font-size: 1.2rem;
+            
+            &__w {
+                overflow: scroll;
+                width: 100%;
+                padding: 10px 0;
+                
+                & > * ~ * {
+                    border-top: 1px solid #ccc
+                }
+    
+                &__inner {
+                @include flex(flex-start, space-between);
+    
+                    &__list {
+                        
+                        &__item {
+                            &__contact {
+                                 @include flex(center, flex-start);
+    
+                                &__name {
+                                    font-size: 1.2rem;
+                                    font-weight: 500;
+                                }
+    
+                                &__bulkhead {
+                                    margin: 0 10px;
+                                    height: 20px;
+                                    width: 1px;
+                                    background-color: #ccc;
+                                }
+    
+                                &__phone {
+                                    font-size: 1.1rem
+                                }
+    
+                            }
+    
+                            &__address {
+                                font-size: 1rem;
                                 font-weight: 500;
+                                color: #999;
+                                margin-top: 10px;
                             }
-
-                            &__bulkhead {
-                                margin: 0 10px;
-                                height: 20px;
-                                width: 1px;
-                                background-color: #ccc;
-                            }
-
-                            &__phone {
-                                font-size: 1.1rem
-                            }
-
                         }
-
-                        &__address {
-                            font-size: 1rem;
-                            font-weight: 500;
-                            color: #999;
-                            margin-top: 10px;
+                    }
+        
+                    &__options {
+                        &__update-delete {
+                            height: 20px;
+                            @include flex(center, flex-end);
+    
+                            &__update {
+                                margin-right: 20px;
+                                font-size: 1.2rem;
+                                cursor: pointer;
+                                color: $main-color;
+                            }
+    
+                            &__delete {
+                                font-size: 1.2rem;
+                                cursor: pointer;
+                                color: $main-color;
+    
+                            }
+    
+                        }
+    
+                        &__default {
+                            height: 35px;
+                            margin-top: 5px;
+                            border: 1px solid #ccc;
+                            padding: 0 5px;
+                            cursor: pointer;
+                            border-radius: 2px;
+    
+                            &:hover {
+                                background-color: #d9d9d9;
+                            }
                         }
                     }
                 }
     
-                &__options {
-                    &__update-delete {
-                        height: 20px;
-                        @include flex(center, flex-end);
-
-                        &__update {
-                            margin-right: 20px;
-                            font-size: 1.2rem;
-                            cursor: pointer;
-                            color: $main-color;
-                        }
-
-                        &__delete {
-                            font-size: 1.2rem;
-                            cursor: pointer;
-                            color: $main-color;
-
-                        }
-
-                    }
-
-                    &__default {
-                        height: 35px;
-                        margin-top: 5px;
-                        border: 1px solid #ccc;
-                        padding: 0 5px;
-                        cursor: pointer;
-                        border-radius: 2px;
-
-                        &:hover {
-                            background-color: #d9d9d9;
-                        }
-                    }
+                &__status {
+                    width: 80px;
+                    border: 1px solid $main-color;
+                    margin-top: 10px;
+                    @include flex(center, center);
+                    font-weight: 500;
+                    color: $main-color;
                 }
-            }
-
-            &__status {
-                width: 80px;
-                border: 1px solid $main-color;
-                margin-top: 10px;
-                @include flex(center, center);
-                font-weight: 500;
-                color: $main-color;
             }
         }
 
