--- a/Client/src/pages/payment/payment.scss
+++ b/Client/src/pages/payment/payment.scss
@@ -141,3 +141,60 @@
 
     }
 }
+
+.modal {
+    &__content {
+        width: 500px;
+        height: 300px;
+        border-radius: 2px;
+        padding: 40px 20px 20px;
+        font-size: 1.6rem;
+        @include flex(flex-start, flex-start);
+        flex-direction: column;
+
+        &__name, &__cccd {
+            margin-top: 15px;
+            width: 100%;
+            height: 35px;
+            border: 1px solid #ccc;
+            border-radius: 2px;
+            padding: 0 10px;
+        }
+
+        &__wrapper {
+            width: 100%;
+            @include flex(center, flex-end);
+            margin-top: 70px;
+
+            &__cancel {
+                margin-right: 10px;
+                font-size: 1.2rem;
+                width: 130px;
+                height: 35px;
+                color: #999;
+                font-weight: 500;
+                cursor: pointer;
+                border-radius: 2px;
+
+                &:hover {
+                    background-color: #dddddd;
+                }
+                
+            }
+
+            &__submit {
+                width: 130px;
+                height: 35px;
+                background-color: $main-color;
+                color: #fff;
+                font-weight: 500;
+                cursor: pointer;
+                border-radius: 2px;
+
+                &:hover {
+                    background-color: rgba(205, 133, 63, 0.9);
+                }
+            }
+        }
+    }
+}
