#Logic Update User Profile FE BE

--- a/Client/src/pages/address/address.scss
+++ b/Client/src/pages/address/address.scss
@@ -152,5 +152,15 @@
             }
         }
 
+        &__no-linked {
+            margin: auto;
+            font-size: 1.6rem;
+            @include flex(center, center);
+            flex-direction: column;
+
+            i {
+                font-size: 4rem;
+            }
+        }
     }
 }
