--- a/Client/src/pages/payment/payment.scss
+++ b/Client/src/pages/payment/payment.scss
@@ -8,8 +8,6 @@
     display: flex;
     flex-direction: column;
 
-    
-
     &__header {
         @include flex(center, space-between);
         
@@ -136,6 +134,19 @@
                         }
                     }
                 }
+            }
+        }
+
+        &__no-linked {
+            margin: auto;
+            font-size: 1.6rem;
+            @include flex(center, center);
+            flex-direction: column;
+
+            &__tips {
+                font-size: 1.2rem;
+                font-weight: 500;
+                color: #999;
             }
         }
 
